# whodap

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: black-linter.yml  run-build-and-test.yml
tests/: test_client.py  test_package_methods.py  test_response.py
tests/samples/: abc.xyz.json  amazon.cyou.json  amazon.ooo.json  bad_response_01.json  bad_response_02.json  bitcoin.org.json  bitcoin.top.json  deep.surf.json  google.com.json  google.pw.json  you.tube.json
whodap/: __init__.py  client.py  codes.py  errors.py  response.py  utils.py
