[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt
name = whodap
version = attrs: whodap.__version__
author = Joseph Obarzanek
author_email = pogzyb@umich.edu
description = Simple RDAP Utility for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pogzyb/whodap
project_urls =
    Bug Tracker = https://github.com/pogzyb/whodap/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Security
    License :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
package_dir = whodap
packages = find:
python_requires = >=3.6

[options.packages.find]
where = whodap